--- a/defsustainability/index.html
+++ b/defsustainability/index.html
@@ -38,7 +38,7 @@ At Sustainability Matters, I&rsquo;m not simply talking about recycling; I&rsquo
 	
 		<div class="avatar">
 			<a href="https://sparkleleuk.github.io/">
-				<img src="earth.png" alt="Sustainability Matters" />
+				<img src="/earth.png" alt="Sustainability Matters" />
 			</a>
 		</div>
 	
