--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,7 @@
 	
 		<div class="avatar">
 			<a href="https://sparkleleuk.github.io/">
-				<img src="earth.png" alt="Sustainability Matters" />
+				<img src="/earth.png" alt="Sustainability Matters" />
 			</a>
 		</div>
 	
